# rag_cli_app

./: .gitignore  Cargo.toml  Dockerfile  prompt.txt
src/: lib.rs  main.rs
