[package]
name = "rag_cli_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
orca = { git = "https://github.com/scrippt-tech/orca", rev = "51e1e259e23b0f3dcdc73601df62405b8de2becc" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.33", features = ["macros"] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
