[package]
name = "rag_cli_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
orca = { git = "https://github.com/scrippt-tech/orca", rev = "6a903b38a769c02ff153699657321c967abc67da", package = "orca-core" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.33", features = ["macros"] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
